package cn.thinkinjava.design.pattern.struct.bridge.frame;

/**
 * 实现化角色
 *
 * @author qiuxianbao
 * @date : 2023/1/13
 */
public abstract class Implementor {
    public abstract void operationImpl();
}
