package cn.thinkinjava.design.pattern.struct.bridge.frame;

/**
 * 修正抽象化角色
 *
 * @author qiuxianbao
 * @date : 2023/1/13
 */
public class RefinedAbstraction extends Abstraction {

    @Override
    public void operation() {
        // 重写抽象化角色
    }

}
